alignment fixes

--- a/less/menu.less
+++ b/less/menu.less
@@ -43,7 +43,7 @@
 
 .top-menu {
 	list-style:none;
-	padding:0;
+	padding:3px;
 
 	>li {
 		display:inline-block;
