--- a/less/style.less
+++ b/less/style.less
@@ -82,7 +82,7 @@ a:hover, a:active, a:focus, a:visited {
 
 @media (min-width: @screen-lg-min) {
 	body.sw-toggled #content {
-		padding:30px 0 30px 160px;
+		padding:30px 0px 30px 150px;
 	}
 }
 
