--- a/less/topic.less
+++ b/less/topic.less
@@ -222,8 +222,6 @@
 			@media (min-width: @screen-sm-min) {
 				padding: 15px 0px 20px 0px;
 				margin: 20px 0px 0px 60px;
-				border-top: 1px solid #d3d4d5;
-	  			border-bottom: 1px solid #d3d4d5;
 	  		}
 
 	  		@media (max-width: @screen-xs-max) {
